# sdl2_template

./: CMakeLists.txt  main.cpp
Classes/: Window.cpp  Window.h
